<resources>
    <string name="app_name">OpenXCManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ip_address">Server IP</string>
    <string name="port_address">Server PORT</string>
    <string name="config_server_button">Config</string>

    <string name="steering_wheel_angle">Steering wheel angle</string>
    <string name="accelerator_percent_percentage">Accelerator pedal percentage</string>
    <string name="break_percent_percentage">Brake pedal percentage</string>
    <string name="vehicle_controls_title">Vehicle controls</string>
    <string name="configuration_title">Server configuration</string>
    <string name="error_port_numeric">Port must be numbers only</string>

    <string name="vehicle_status_title">Vehicle status</string>
    <string name="ignition_status">Ignition status</string>
    <string name="ignition_status_off">off</string>
    <string name="ignition_status_accessory">Acces</string>
    <string name="ignition_status_run">Run</string>
    <string name="ignition_status_start">Start</string>
    <string name="gear_position">Gear level position</string>
    <string name="gear_position_park">Park</string>
    <string name="gear_position_drive">Drive</string>
    <string name="gear_position_neutral">Neutral</string>
    <string name="gear_position_reverse">Reverse</string>
    <string name="parking_break_active">Parking break active</string>
    <string name="headlamp_status">Headlamp status</string>
    <string name="shift_transmission">Shift transmission</string>

    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="vehicle_location_title">Vehicle location</string>
    <string name="title_activity_map">Location</string>
    <string name="vehicle_mil_dtc_title"><![CDATA[MIL & DTC]]></string>
    <string name="title_activity_dtc_codes">Dtc codes</string>
    <string name="please_wait">Please wait</string>
</resources>
